--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@typescript-eslint/parser": "^2.31.0",
+    "eslint": "^6.8.0",
     "source-map-support": "^0.5.10"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
     "@types/jest": "^25.2.1",
     "@types/node": "^10.12.18",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "eslint-config-airbnb-typescript": "^7.2.1",
+    "eslint-plugin-import": "^2.20.2",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "jest": "^26.0.1",
     "serverless-webpack": "^5.2.0",
