--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-plugin-import": "^2.20.2",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "jest": "^26.0.1",
+    "serverless": "^1.70.0",
     "serverless-webpack": "^5.2.0",
     "ts-jest": "^25.5.0",
     "ts-loader": "^5.3.3",
