Add api & invoke rules

--- a/Makefile.env
+++ b/Makefile.env
@@ -1,4 +1,5 @@
 TEST_NAME=messageBuilderGoalSequencing
 AWS_PROFILE=boots
 FUNCTION_NAME=hello
-EVENT_DATA='{"a":"bar"}'
+EVENT_PATH=event.json
+SLS_ENV=-e VAR1=value1 -e VAR2=value2
