--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "jest": "^26.0.1",
     "serverless": "^1.70.0",
+    "serverless-offline": "^6.1.5",
     "serverless-webpack": "^5.2.0",
     "ts-jest": "^25.5.0",
     "ts-loader": "^5.3.3",
