--- a/serverless.yml
+++ b/serverless.yml
@@ -12,6 +12,7 @@ custom:
 # Add the serverless-webpack plugin
 plugins:
   - serverless-webpack
+  - serverless-offline
 
 provider:
   name: aws
@@ -24,6 +25,8 @@ provider:
 functions:
   hello:
     handler: src/functions/hello.handler
+    environment:
+      TEST_VAR: test
     events:
       - http:
           method: get
