--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -3,10 +3,10 @@ Description: >
   Create a CodePipeline and CodeBuild project for a Serverless app
 
 Parameters:
-  AppStackName:
-    Type: String
-    Description: Name of the CF stack that will be deployed by CodePipeline
-    Default: demo-serverless-app
+  # AppStackName:
+  #   Type: String
+  #   Description: Name of the CF stack that will be deployed by CodePipeline
+  #   Default: demo-serverless-app
 
   Environment:
     Type: String
@@ -186,25 +186,27 @@ Resources:
               runtime-versions:
                 nodejs: 12
               commands:
+                - echo INSTALL phase started `date`
                 - make install
             pre_build:
               commands:
+                - echo PRE_BUILD phase started `date`
                 - make pre-build
             build:
               commands:
+                - echo BUILD phase started `date`
                 - make build
             post_build:
               commands:
+                - echo POST_BUILD phase started `date`
                 - make post-build
       Environment:
         ComputeType: BUILD_GENERAL1_SMALL
         Image: aws/codebuild/amazonlinux2-x86_64-standard:3.0
         Type: LINUX_CONTAINER
         EnvironmentVariables:
-          - Name: APP_ARTIFACT_BUCKET
-            Value: !Ref AppArtifactBucket
-          - Name: APP_STACK_NAME
-            Value: !Ref AppStackName
+          # - Name: APP_STACK_NAME
+          #   Value: !Ref AppStackName
           - Name: APP_ENVIRONMENT
             Value: !Ref Environment
       ServiceRole: !Ref CodeBuildServiceRole
