--- a/serverless.yml
+++ b/serverless.yml
@@ -13,6 +13,8 @@ plugins:
 provider:
   name: aws
   runtime: nodejs12.x
+  deploymentBucket:
+    name: ${env:APP_BUCKET}
   apiGateway:
     minimumCompressionSize: 1024 # Enable gzip compression for responses > 1 KB
   environment:
