--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -3,11 +3,6 @@ Description: >
   Create a CodePipeline and CodeBuild project for a Serverless app
 
 Parameters:
-  # AppName:
-  #   Type: String
-  #   Description: Name of the app CF stack to be deployed via CodePipeline
-  #   Default: demo-serverless-app
-
   Environment:
     Type: String
     Description: Environment stage (eg. dev, qa, prod)
@@ -115,6 +110,18 @@ Resources:
               - s3:GetObjectVersion
             Resource:
               - !Sub arn:aws:s3:::${ArtifactStoreBucket}/*
+          - Effect: Allow
+            Action:
+              - s3:DeleteObject
+              - s3:DeleteObjectVersion
+              - s3:GetObject
+              - s3:GetObjectVersion
+              - s3:PutObject
+              - s3:ListBucket
+              - s3:ListBucketVersions
+              - s3:GetBucketLocation
+            Resource:
+              - !Sub arn:aws:s3:::${AppArtifactBucket}
               - !Sub arn:aws:s3:::${AppArtifactBucket}/*
           - Effect: Allow
             Action:
