--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "module": "commonjs",
     "lib": ["es2019"],
     "removeComments": true,
     "moduleResolution": "node",
