--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-import": "^2.20.2",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "jest": "^26.0.1",
+    "newman": "^5.0.1",
     "serverless": "^1.70.0",
     "serverless-offline": "^6.1.5",
     "serverless-webpack": "^5.2.0",
