--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "source-map-support": "^0.5.10",
-    "ts-sinon": "^1.2.0"
+    "ts-sinon": "^1.2.0",
+    "uuid": "^8.2.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
