--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "amqp": "^0.2.7",
     "aws-sdk": "^2.673.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
